# Gear-Lang

./: .gitignore  Makefile  README.md  cmake_install.cmake
doc/: step1.md  token.md
inc/: token.h
src/: CMakeLists.txt  main.cpp  token.cpp
test/: expression1.gear
test/outputs/: expression1.txt
